api-server: remove dependency on oas3-tools
